syntax = "proto3";

package arith;
option go_package = "../arith";

service Arithmetic {
  rpc Add (AddRequest) returns (AddResponse) {};
  rpc StreamSum (stream SumRequest) returns (stream SumResponse) {};
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
}

message SumRequest {
  int32 number = 1;
}

message SumResponse {
  int32 result = 1;
}

// protoc --go_out=. --go-grpc_out=. .\arith.proto